2016-06-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/amrandom.pl: Improve debugging
	* common-src/shm-ring.c: Improve debugging

2016-06-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/gettext-macros/gettext.m4,
	  config/gettext-macros/po.m4: s/AM_PROG_MKDIR_P/AC_PROG_MKDIR_P/

2016-06-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/libs.m4 (AMANDA_CHECK_LIBCURL): Check for
	  HMAC_CTX_init or HMAC_CTX_reset
	* common-src/glib-util.c, common-src/ssl-security.c,
	  device-src/s3-util.c, device-src/s3.c: Fix for openssl 1.1

2016-06-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Rest/Runs.pm (list one): Do not return emtpy string

2016-06-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Rest/Runs.pm (list): Do not set $status

2016-06-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Amdump.pm (message 2000000): use logfile
	* perl/Amanda/Amdump.pm (message 2000001): use tracefile
	* perl/Amanda/Amflush.pm (message 2200000): use logfile
	* perl/Amanda/Amflush.pm (message 2200001): use tracefile
	* perl/Amanda/Report.pm: Set status to 'running', 'done' or
	  'aborted'
	* perl/Amanda/Report/json.pm: Report the status in head->status
	* perl/Amanda/Rest/Runs.pm: Use tracefile and logfile
	* perl/Amanda/Rest/Status.pm:use tracefile
	* installcheck/Amanda_Report.pl: Add pids
	* installcheck/Amanda_Rest_Runs.pl: Add pids
	* installcheck/pp-scripts.pl: use tracefile and logfile
	* installcheck/catalogs/amflush.cat,
	  installcheck/catalogs/fatal.cat,
	  installcheck/catalogs/flush-noorigsize.cat,
	  installcheck/catalogs/flush-origsize.cat,
	  installcheck/catalogs/normal.cat,
	  installcheck/catalogs/plannerfail.cat,
	  installcheck/catalogs/retried-strange.cat,
	  installcheck/catalogs/skipped.cat,
	  installcheck/catalogs/spanned.cat,
	  installcheck/catalogs/strontium.cat,
	  installcheck/catalogs/taperr.cat: Add pid lines
